# ptmfit

./: AUTHORS  ChangeLog  LinearSystem.cpp  LinearSystem.h  Makefile.am  README.md  RGBImage.h  TODO  bootstrap.sh  computepoly.c  computepoly.h  configure.ac  main.cpp  nrutil.c  nrutil.h  svd.c  svd.h  writeptm.c  writeptm.h
